# mcp-zkvm

./: .gitignore  README.md  mcp_server.py  requirements.txt
guest/: Cargo.toml
guest/src/: main.rs
zkvm_local_server/: Cargo.toml
zkvm_local_server/proofs/: proof
zkvm_local_server/src/: main.rs  proving.rs
